--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,6 @@
 /* new year banner starts here */
 .new-year{
     font-family: 'Merriweather', serif;
-   
 }
 .new-year img{
     position: absolute;
@@ -59,7 +58,7 @@ margin-bottom: 5px;
     font-size: 24px;
     color: #FF0000;
 }
-span{
+.discount span{
     gap: 10px;
 font-size: 48px;
 color: #070211;
@@ -67,6 +66,7 @@ font-weight: 700;
 }
 /* discount banner starts here */
 .invitation{
+    background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
     background-image: url(/resources/Vectorrr.png);
     top: 1696px;
     height: 600px;
@@ -74,7 +74,7 @@ font-weight: 700;
     margin-left: 140px ;
     position: absolute;
 }
-.invitation-header
+.invitation-description
 {
     position: relative;
     top: 126px;
@@ -102,8 +102,7 @@ height: 60px;
 position: relative;
 width: 103px;
 height: 24px;
-top: -300px;
-left: 158px;
+left: 28px;
 color: #FFF;
 text-align: center;
 font-family: Inter; 
@@ -114,4 +113,87 @@ border: none;
     position: relative;
 top: -280px;
     left: 800px;
+}
+/* details banner starts here */
+.details{
+    background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%););
+    position: absolute;
+    margin-top: 50px;
+    margin-left: 140px;
+height: 482px;
+border-radius: 16px;
+width: 1320px;
+top:2400px ;
+}
+.details h3
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    position: relative;
+    top: 100px;color: #070211;
+    font-family: Inter;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    text-transform: capitalize;
+}
+.details span
+{
+    color: #F00; 
+}
+.details button{
+    color: #FFF; 
+    background-color: #F00;
+    padding:16px 32px;
+    position: relative;
+    top: 116px;
+    left: 576px;
+    border: none;
+    border-radius: 8px;
+
+}
+/* details banner starts here */
+.bonus-section{
+    position: absolute;
+    margin-top: 50px;
+    margin-left: 140px;
+height: 482px;
+border-radius: 16px;
+width: 1320px;
+top:3000px ;
+}
+/*advertising*/
+.advertise{
+    position: absolute;
+    margin-top: 50px;
+    margin-left: 140px;  
+    top:3500px;
+    width: 1600px;
+height: 7335px;
+}
+.advertise-header{
+    color: #F00;
+font-family: Inter;
+font-size: medium;
+font-style: normal;
+margin-bottom: 16px;
+}
+.advertise h1{
+    color: #070211;
+font-family: Merriweather;
+font-size: 48px;
+font-weight: 900;
+line-height: normal;
+text-transform: capitalize;
+margin: 0px;
+}
+.advertise-description{
+    width: 896px;
+    color: rgba(7, 2, 17, 0.60);
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+margin-top: 22px;
 }
