--- a/style/style.css
+++ b/style/style.css
@@ -1,14 +1,15 @@
 /* new year banner starts here */
 .new-year{
     font-family: 'Merriweather', serif;
-}
-.new-year img{
-    position: absolute;
+    background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url(../resources/Banner\ Image.png);
     margin-top: 50px;
     margin-left: 140px;
-height: 600px;
+    height: 600px;
+    width:1320px;
 border-radius: 16px;
+position: absolute;
 }
+
 .new-year h3{
     position: relative;
     text-align: center;
@@ -18,9 +19,9 @@ border-radius: 16px;
    font-size: 32px;
 }
 .new-year h1{
-    gap: 0px;
+   
     position: relative;
-    top: 233px;
+    top: 130px;
     text-align: center;
     color: #FFFFFF;
     font-weight: 900;
@@ -64,10 +65,10 @@ font-size: 48px;
 color: #070211;
 font-weight: 700;
 }
-/* discount banner starts here */
+/* invitation starts here */
 .invitation{
-    background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
-    background-image: url(/resources/Vectorrr.png);
+    background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%),url(../resources/Vectorrr.png);
+    
     top: 1696px;
     height: 600px;
     width: 1320px;
@@ -116,7 +117,7 @@ top: -280px;
 }
 /* details banner starts here */
 .details{
-    background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%););
+    background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
     position: absolute;
     margin-top: 50px;
     margin-left: 140px;
